# embedchain-streamlit-app

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
demo_app/: main.py
demo_app/components/: faq.py  sidebar.py
